# cpp-channel

./: .clang-format  .clang-tidy  .cmake-format.json  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  annotated.html  blocking__iterator_8hpp.html  blocking__iterator_8hpp__dep__incl.map  blocking__iterator_8hpp__dep__incl.md5  blocking__iterator_8hpp__incl.map  blocking__iterator_8hpp__incl.md5  blocking__iterator_8hpp_source.html  blocking_iterator.hpp  blocking_iterator_test.cpp  channel.cpp  channel.h  channel.hpp  channel_8hpp.html  channel_8hpp__dep__incl.map  channel_8hpp__dep__incl.md5  channel_8hpp__incl.map  channel_8hpp__incl.md5  channel_8hpp_source.html  channel_benchmark.cpp  channel_iterator.hpp  channel_iterator_test.cpp  channel_test.cpp  classes.html  classmsd_1_1array__storage-members.html  classmsd_1_1array__storage.html  classmsd_1_1blocking__iterator-members.html  classmsd_1_1blocking__iterator.html  classmsd_1_1blocking__writer__iterator-members.html  classmsd_1_1blocking__writer__iterator.html  (+63 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bench.yml  cmake.yml  doc.yml
benchmarks/: .clang-tidy  CMakeLists.txt  channel_benchmark.cpp
cmake/: warnings.cmake
examples/: .clang-tidy  CMakeLists.txt  basic.cpp  close.cpp  concurrent_map_filter.cpp  graceful_shutdown.cpp  merge_channels.cpp  move.cpp  multithreading.cpp  multithreading_static_channel.cpp  semaphore.cpp  streaming.cpp  timeout.cpp
examples/bazel-project/: BUILD  MODULE.bazel  README.md
examples/bazel-project/src/: main.cpp
examples/cmake-project/: .clang-format  CMakeLists.txt  Makefile  README.md
examples/cmake-project/src/: main.cpp
html/: annotated.html  blocking__iterator_8hpp_source.html  channel_8hpp_source.html  classmsd_1_1blocking__iterator.html  classmsd_1_1closed__channel__inherit__graph.map  classmsd_1_1closed__channel__inherit__graph.md5  dir_3454e50a66b3e63d1fc748d2fca141f2.html  dir_3454e50a66b3e63d1fc748d2fca141f2_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions_func.html  functions_type.html  graph_legend.html  index.html  inherit_graph_0.md5
html/search/: all_0.js  all_1.js  all_3.js  all_8.js  all_c.js  functions_0.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js  typedefs_0.js
include/: blocking_iterator.hpp  channel.cpp  channel.hpp
include/msd/: blocking_iterator.hpp  channel.cpp  channel.hpp  channel.inl  channel_impl.hpp  nodiscard.hpp  result.hpp  static_channel.hpp  storage.hpp  storages.hpp
latex/: annotated.tex  blocking__iterator_8hpp_source.tex  channel_8hpp_source.tex  classmsd_1_1blocking__iterator.tex  classmsd_1_1channel.tex  classmsd_1_1closed__channel.tex  classmsd_1_1closed__channel__inherit__graph.md5  files.tex  hierarchy.tex  index.tex  refman.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  related_0.js  (+8 more)
tests/: .clang-tidy  CMakeLists.txt  blocking_iterator_test.cpp  channel_benchmark.cpp  channel_test.cpp  static_channel_test.cpp  storage_test.cpp  storages_test.cpp
