bazel_dep(name = "msd.channel")

msd_channel_module = """module(
    name = "msd.channel",

)"""

msd_channel_build = """package(default_visibility = ["//visibility:public"])
 
cc_library(
    name = "msd.channel",
    includes = ["include"],
    hdrs = glob(["include/**/*.*"]),
)
"""

archive_override(
    module_name = "msd.channel",
    patch_cmds = [
        "echo '" + msd_channel_module + "' > MODULE.bazel",
        "echo '" + msd_channel_build + "' > BUILD.bazel",
    ],
    urls = ["https://github.com/andreiavrammsd/cpp-channel/archive/refs/tags/v1.3.0.zip"],
    strip_prefix = "cpp-channel-1.3.0",
    integrity = "sha256-qHLwQP0jeLguWgUxuOHmZ6kXiRCuDYmIUBfl1R1bF2E=",
)
